feat: create stream.js

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=6000;
 NODE_ENV=development;
-TEXT=my name is Alex
+TEXT=my name is Alex;
+TEXT2=hello,world;
+NEW_TEXT=кто-то нас встретит в темноте
