feat: add info about cross-env in app.js and add new script start1 in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./lessons/process.js"
+    "start": "node ./lessons/process.js",
+    "start1": " cross-env PORT1=7000 node ./lessons/app.js"
   },
   "repository": {
     "type": "git",
